<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.fragments.DiscoveryFragment"
    android:id="@+id/fragment_discovery">

    <!-- Scroll view nesting all everthing exepct the drawer -->

    <!-- Toolbar -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/primary"
        app:title="Home"
        app:contentInsetStart="0dp"
        app:menu="@menu/menu_add_event">

        <!-- Search bar -->
        <androidx.appcompat.widget.SearchView
            android:id="@+id/search_view"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:layout_marginEnd="8dp"
            android:paddingStart="-20dp"
            app:iconifiedByDefault="false"
            app:queryHint="@string/search_hint" />

    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!--==================== Event categories =====================-->
            <TextView
                android:id="@+id/tv_event_categories"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/event_categories"
                android:visibility="gone"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"/>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_event_categories"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="gone"
                tools:listitem="@layout/item_event_category"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintTop_toBottomOf="@id/tv_event_categories" />

            <!--====================Search Results=========================-->
            <TextView
                android:id="@+id/tv_search_results"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/search_results"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"/>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_search_results"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                tools:listitem="@layout/item_event_category"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintTop_toBottomOf="@id/tv_search_results" />
            <TextView
                android:id="@+id/no_search_results"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:visibility="gone"
                android:text="@string/no_search_results"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"/>


            <!--=================== Popular events =============================-->
            <TextView
                android:id="@+id/tv_popular_events"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/popular_events"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline" />
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_popular_events"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                tools:listitem="@layout/item_event"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintTop_toBottomOf="@id/tv_popular_events" />

            <!--=============== Recommended events =======================-->
            <TextView
                android:id="@+id/tv_recommended_events"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/recommended_events"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline" />
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_recommended_events"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                tools:listitem="@layout/item_event"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintTop_toBottomOf="@id/tv_recommended_events" />

            <!--=========== Upcoming events ===================-->
            <TextView
                android:id="@+id/tv_upcoming_events"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/upcoming_events"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_upcoming_events"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                tools:listitem="@layout/item_event"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintTop_toBottomOf="@id/tv_upcoming_events" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>